force-app/main/default/objects/System_Switch__c/System_Switch__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>System Switch</label>
</CustomObject>