force-app/main/default/objects/System_Switch__c/fields/DisableTriggers__c.field-meta.xml
<CustomField>
    <fullName>DisableTriggers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DisableTriggers</label>
    <type>Checkbox</type>
</CustomField>