force-app/main/default/objects/System_Switch__c/fields/Enable_Map_Marker_Select_Redirect__c.field-meta.xml
<CustomField>
    <fullName>Enable_Map_Marker_Select_Redirect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Map Marker Select Redirect</label>
    <type>Checkbox</type>
</CustomField>