force-app/main/default/objects/System_Switch__c/fields/ObjectTriggersToBeDisabled__c.field-meta.xml
<CustomField>
    <fullName>ObjectTriggersToBeDisabled__c</fullName>
    <label>ObjectTriggersToBeDisabled</label>
    <length>255</length>
    <type>Text</type>
</CustomField>